Dynamic Xdefaults home folder

--- a/desktop_environment/.Xdefaults.erb
+++ b/desktop_environment/.Xdefaults.erb
@@ -6,7 +6,7 @@ URxvt.scrollBar_right: true
 URxvt.scrollstyle:plain
 
 ! Perl extensions
-URxvt.perl-lib: /home/welldan/.urxvt-perls/
+URxvt.perl-lib: <%= @destination %>/.urxvt-perls/
 URxvt.perl-ext-common: default,matcher,tabbed,clipboard
 
 URxvt.matcher.button: 1
