--- a/cron/.crontab.erb
+++ b/cron/.crontab.erb
@@ -1,5 +1,5 @@
 SHELL=<%= ENV['SHELL'] %>
 PATH=<%= ENV['PATH'] %>
 
+@daily zsh -c "source $HOME/.zshrc && delete-temporary-files"
 @weekly zsh -c "source $HOME/.zshrc && backup-netvibes"
-
