--- a/ruby/.ruby_and_rails/templates/Gemfile.tt
+++ b/ruby/.ruby_and_rails/templates/Gemfile.tt
@@ -46,7 +46,13 @@ gem 'squeel'
 
 group :development, :test do
   gem 'pry'
+end
+
+group :development do
   gem 'quiet_assets'
+end
+
+group :test do
   gem 'rspec-rails'
   gem 'database_cleaner'
   gem 'email_spec'
@@ -56,7 +62,6 @@ group :development, :test do
   gem 'factory_girl_rails'
   gem 'faker'
 end
-
 
 #   Deploying
 
