Rename variable to avoid collisions

--- a/dotfiles/git/.gitconfig.erb
+++ b/dotfiles/git/.gitconfig.erb
@@ -1,5 +1,5 @@
 [user]
-  name = <%= @config.name %>
+  name = <%= @config.real_name %>
   email = <%= @config.email %>
 [github]
   user = <%= @config.username %>
