Push current branch by default
And remove useless alias

--- a/dotfiles/git/.gitconfig.erb
+++ b/dotfiles/git/.gitconfig.erb
@@ -4,8 +4,6 @@
 [github]
   user = <%= @config.username %>
   token = <%= @config.github_token %>
-[alias]
-  co = checkout
 [color]
   diff = auto
   branch = auto
@@ -18,3 +16,5 @@
   autocorrect = 50
 [apply]
   whitespace = nowarn
+[push]
+  default = current
