--- a/dotfiles/git/.gitconfig.erb
+++ b/dotfiles/git/.gitconfig.erb
@@ -11,7 +11,7 @@
   status = auto
 [core]
   autocrlf = input
-  excludesfile = ~/.gitignore_global
+  excludesfile = ~/gitignore
 [help]
   autocorrect = 50
 [apply]
