Recover ERB funcitonality

--- a/dotfiles/git/.gitconfig.erb
+++ b/dotfiles/git/.gitconfig.erb
@@ -40,5 +40,5 @@
 [rerere]
   enabled = true
 [user]
-  name = <%= @config.real_name %>
-  email = <%= @config.email %>
+  name = <%= @config.REAL_NAME %>
+  email = <%= @config.EMAIL %>
