--- a/dotfiles/git/.gitconfig.erb
+++ b/dotfiles/git/.gitconfig.erb
@@ -17,7 +17,7 @@
   new = green
 [core]
   autocrlf = false
-  excludesfile = ~/gitignore
+  excludesfile = ~/.gitignore
 [credential]
   helper = /opt/boxen/bin/boxen-git-credential
 [diff]
