--- a/dotfiles/git/.gitconfig.erb
+++ b/dotfiles/git/.gitconfig.erb
@@ -40,5 +40,5 @@
 [rerere]
   enabled = true
 [user]
-  name = <%= @config.REAL_NAME %>
-  email = <%= @config.EMAIL %>
+  name = <%= real_name %>
+  email = <%= email %>
