--- a/dotfiles/mutt/.muttrc.erb
+++ b/dotfiles/mutt/.muttrc.erb
@@ -26,3 +26,4 @@ color body brightblue brightwhite (https?|ftp)://[\-\.,/%~_:?&=\#a-zA-Z0-9]+
 
 
 bind index "g" imap-fetch-mail
+auto_view text/html
