--- a/dotfiles/mutt/.muttrc.erb
+++ b/dotfiles/mutt/.muttrc.erb
@@ -27,3 +27,9 @@ color body brightblue brightwhite (https?|ftp)://[\-\.,/%~_:?&=\#a-zA-Z0-9]+
 
 bind index "g" imap-fetch-mail
 auto_view text/html
+
+set sort="threads"
+set strict_threads="yes"
+set sort_browser="reverse-date"
+set sort_aux="last-date-received"
+set sort=reverse-threads
