--- a/dotfiles/mutt/.muttrc.erb
+++ b/dotfiles/mutt/.muttrc.erb
@@ -1,5 +1,8 @@
 set imap_user = '<%= email %>'
 set imap_pass = '<%= email_password %>'
+set smtp_url = 'smtp://<%= user %>@smtp.gmail.com:587/'
+set smtp_pass = '<%= email_password %>'
+set smtp_authenticators = 'gssapi:login'
 
 set spoolfile = imaps://imap.gmail.com/INBOX
 set folder = imaps://imap.gmail.com/
