Do not ignore case in git

--- a/dotfiles/git/.gitconfig.erb
+++ b/dotfiles/git/.gitconfig.erb
@@ -18,6 +18,7 @@
 [core]
   autocrlf = false
   excludesfile = ~/.gitignore
+  ignorecase = false
 [credential]
   helper = /opt/boxen/bin/boxen-git-credential
 [diff]
