--- a/dotfiles/mutt/.muttrc.erb
+++ b/dotfiles/mutt/.muttrc.erb
@@ -14,6 +14,9 @@ set mbox="imaps://imap.gmail.com/[Gmail]/All Mail"
 
 set timeout=60
 
+auto_view text/html
+alternative_order text/plain text/html
+
 color normal black brightwhite
 color attachment brightyellow default
 color hdrdefault blue default
