Fix ZSH highlighting

--- a/dotfiles/zsh/.zshrc.erb
+++ b/dotfiles/zsh/.zshrc.erb
@@ -133,7 +133,7 @@ use-direnv() {
 }
 
 use-zsh-syntax-highlighting() {
-  source $HOMEBREW_ROOT/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
+  source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 }
 
 main
