--- a/dotfiles/zsh/.zshrc.erb
+++ b/dotfiles/zsh/.zshrc.erb
@@ -57,7 +57,6 @@ set-up-main() {
     # compleat
     # cpanm
     # jira
-    bgnotify
     bower
     bundler
     brew
@@ -90,6 +89,7 @@ set-up-main() {
     rvm
     thor
     vagrant
+    w97-bgnotify
   )
 }
 
