--- a/dotfiles/zsh/.zshrc.erb
+++ b/dotfiles/zsh/.zshrc.erb
@@ -12,6 +12,8 @@ main() {
   use-direnv
 
   use-zsh-syntax-highlighting
+  # Smart matching of dashed values, e.g. f-b matching foo-bar
+  zstyle ':completion:*' matcher-list 'r:|[._-]=* r:|=*'
 }
 
 set-up-env() {
