--- a/dotfiles/git/.gitconfig.erb
+++ b/dotfiles/git/.gitconfig.erb
@@ -38,6 +38,8 @@
   default = current
 [rerere]
   enabled = true
+[credential]
+	helper = store
 [user]
   name = <%= real_name %>
   email = <%= email %>
