--- a/dotfiles/git/.gitconfig.erb
+++ b/dotfiles/git/.gitconfig.erb
@@ -11,14 +11,23 @@
   local = yellow
   remote = green
 [color "diff"]
-  meta = yellow bold
-  frag = magenta bold
-  old = red
-  new = green
+	meta = yellow
+	frag = magenta bold
+	old = red bold
+	new = green bold
+	commit = yellow bold
+	whitespace = red reverse
+[color "diff-highlight"]
+	oldNormal = red bold
+	oldHighlight = red bold 52
+	newNormal = green bold
+	newHighlight = green bold 22
+
 [core]
   autocrlf = false
   excludesfile = ~/.gitignore
   ignorecase = false
+  pager = diff-so-fancy | less --tabs=4 -RFX
 [diff]
   mnemonicprefix = true
   algorithm = patience
