--- a/dotfiles/zsh/.zshrc.erb
+++ b/dotfiles/zsh/.zshrc.erb
@@ -40,7 +40,7 @@ set-up-env() {
   export MANTRA_PATH="<%= mantra_path %>"
 
   source "$DOTFILES_PATH/configuration/env/public.sh"
-  export EDITOR=$EMACS_CLIENT_PATH
+  export EDITOR="atom -w"
 }
 
 set-up-main() {
